# pathfinding

./: .coverage  .gitignore  README.md  coverage.json  pyproject.toml  tasks.py
documents/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
documents/reports/: viikko1.md  viikko2.md  viikko4.md
pathfinding/src/: main.py
pathfinding/src/algorithms/: dijkstra.py  jps.py
pathfinding/src/tests/: dijkstra_test.py
reports/: viikko3.md  viikko5.md  viikko6.md
src/: dijkstra.py  main.py  node.py  perfomance.py
src/algorithms/: a_star.py  astar.py  dijkstra.py  jps.py  node.py
src/tests/: _test.py  a_star_test.py  astar_test.py  dijkstra_test.py  jps_test.py
