[tool.poetry]
name = "tiralab"
version = "0.1.0"
description = ""
authors = ["Tuomas Huhtala <tuomas.huhtala@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"
pylint = "^2.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
